[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                               # error handling
clap = { version = "4.0.32", features = ["derive"]}             # creating a cli
flate2 = "1.0"                                                  # gzip compression
hex = "0.4.3"                                                   # working with hash output
reqwest = { version = "0.12", features = ["json", "blocking"] } # http requests
sha1 = "0.10.1"                                                 # hashing
